--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: 코메이크3.0 사용자 가이드
+description: This is guide document for COMAKE3.0 users.
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://comakeai.github.io/user_doc
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/comakeai/user_doc
