--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,20 @@ url: https://comakeai.github.io/user_doc
 
 aux_links:
   Template Repository: https://github.com/comakeai/user_doc
+
+callouts_level: quiet # or loud
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
