--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,6 @@ callouts:
     title: Warning
     color: red
 
-search_enabled: true
-search.heading_level: 2
-# search.previews: 3
-# search.preview_words_before: 1
-# search.preview_words_after: 10
-# search.tokenizer_separator: /[\s/]+/
-search.rel_url: false
+search_enabled: false
+logo: "/user_guid/assets/logo.png"
+favicon_ico: "/user_guid/assets/favicon.ico"
